--- a/main.html
+++ b/main.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <style>
+    .holder {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: space-between;
+    }
+
+    .item {
+      width: 30%; /* Adjust as needed */
+      margin: 10px; /* Adjust as needed */
+      background-color: #f2f2f2;
+      padding: 10px;
+      box-sizing: border-box;
+    }
+  </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+  <div class="holder">
+    <div class="item">Item 1</div>
+    <div class="item">Item 2</div>
+    <div class="item">Item 3</div>
+    <!-- Add more items here if needed -->
+  </div>
 </body>
-
 </html>
